changes and solved all problems

--- a/notebook/data/calories_modeling.ipynb
+++ b/notebook/data/calories_modeling.ipynb
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "id": "08390eb6",
    "metadata": {},
    "outputs": [],
@@ -752,7 +752,7 @@
     "                (\"Linear\",LinearRegression(),linear_params),  \n",
     "                (\"Decision\",DecisionTreeRegressor(),decision_tree_params),\n",
     "                (\"XGBoostRegressor\",XGBRegressor(),xgboost_reg_params), \n",
-    "                (\"RandomForrest\", RandomForestRegressor(),random_forest_params)\n",
+    "                (\"RandomForest\", RandomForestRegressor(),random_forest_params)\n",
     "               ]"
    ]
   },
@@ -862,7 +862,7 @@
     "    \"Linear Regression\": LinearRegression(),\n",
     "    \"Decision Tree Regression\": DecisionTreeRegressor(criterion = 'squared_error', max_depth = 15, max_features = None, min_samples_leaf = 2, min_samples_split = 5),\n",
     "    \"XGBoost Regression\": XGBRegressor(colsample_bytree = 0.9, gamma = 0, learning_rate = 0.1, max_depth = 6, min_child_weight = 3, n_estimators = 300, subsample = 0.7),\n",
-    "    \"Random Forrest Regression\" : RandomForestRegressor(max_depth = 15, max_features = None, min_samples_leaf = 1, min_samples_split = 2, n_estimators = 300)\n",
+    "    \"Random Forest Regression\" : RandomForestRegressor(max_depth = 15, max_features = None, min_samples_leaf = 1, min_samples_split = 2, n_estimators = 300)\n",
     "}\n",
     "\n",
     "model_list = []\n",
