--- a/notebook/data/calories_modeling.ipynb
+++ b/notebook/data/calories_modeling.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "23640bbf",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 21,
    "id": "df9cbe1c",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 22,
    "id": "f76b613b",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
        "4        35  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 23,
    "id": "b6367edd",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 24,
    "id": "34fecd1d",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
        "4  female   27     154        10          81       39.8        35"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 25,
    "id": "1a96fc98",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 26,
    "id": "9708dfd5",
    "metadata": {},
    "outputs": [],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 27,
    "id": "cc1ba390",
    "metadata": {},
    "outputs": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 28,
    "id": "8f5bbc8f",
    "metadata": {},
    "outputs": [],
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 29,
    "id": "5ffa5d3f",
    "metadata": {},
    "outputs": [],
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 30,
    "id": "2ad71280",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,7 @@
        "(15000, 6)"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 31,
    "id": "9dba2d91",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
        "       0.99402302])"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 32,
    "id": "7ef737a2",
    "metadata": {},
    "outputs": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 33,
    "id": "ae92dfa7",
    "metadata": {},
    "outputs": [],
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "84d061a3",
    "metadata": {},
    "outputs": [
@@ -514,21 +514,21 @@
       "- R2 Score: 1.0000\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.1951\n",
-      "- Mean Absolute Error: 3.3913\n",
-      "- R2 Score: 0.9933\n",
+      "- Root Mean Squared Error: 5.1446\n",
+      "- Mean Absolute Error: 3.3573\n",
+      "- R2 Score: 0.9934\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 1.1414\n",
-      "- Mean Absolute Error: 0.7214\n",
+      "- Root Mean Squared Error: 1.1340\n",
+      "- Mean Absolute Error: 0.7194\n",
       "- R2 Score: 0.9997\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 2.8430\n",
-      "- Mean Absolute Error: 1.8648\n",
+      "- Root Mean Squared Error: 2.8305\n",
+      "- Mean Absolute Error: 1.8763\n",
       "- R2 Score: 0.9980\n",
       "===================================\n",
       "\n",
@@ -548,14 +548,14 @@
       "\n",
       "AdaBoost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 11.8966\n",
-      "- Mean Absolute Error: 9.5336\n",
-      "- R2 Score: 0.9634\n",
+      "- Root Mean Squared Error: 11.7626\n",
+      "- Mean Absolute Error: 9.4239\n",
+      "- R2 Score: 0.9642\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 12.0141\n",
-      "- Mean Absolute Error: 9.6433\n",
-      "- R2 Score: 0.9642\n",
+      "- Root Mean Squared Error: 11.8695\n",
+      "- Mean Absolute Error: 9.5042\n",
+      "- R2 Score: 0.9651\n",
       "===================================\n",
       "\n",
       "\n"
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 35,
    "id": "e7507991",
    "metadata": {},
    "outputs": [
@@ -650,12 +650,12 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.997997</td>\n",
+       "      <td>0.998015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.993313</td>\n",
+       "      <td>0.993442</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -670,7 +670,7 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>AdaBoost Regressor</td>\n",
-       "      <td>0.964235</td>\n",
+       "      <td>0.965091</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -684,15 +684,15 @@
       "text/plain": [
        "                Model Name  R2_score\n",
        "5             XGBRegressor  0.998521\n",
-       "4  Random Forest Regressor  0.997997\n",
-       "3            Decision Tree  0.993313\n",
+       "4  Random Forest Regressor  0.998015\n",
+       "3            Decision Tree  0.993442\n",
        "0        Linear Regression  0.966918\n",
        "1         Ridge Regression  0.966917\n",
-       "6       AdaBoost Regressor  0.964235\n",
+       "6       AdaBoost Regressor  0.965091\n",
        "2         Lasso Regression  0.960643"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "0beb5297",
    "metadata": {},
    "outputs": [],
@@ -715,34 +715,25 @@
     "decision_tree_params = {\n",
     "            \"criterion\": ['squared_error', 'absolute_error'],\n",
     "            #\"criterion\":['squared_error', 'friedman_mse', 'absolute_error', 'poisson'],\n",
-    "            \"max_depth\": [None, 5, 10, 15],\n",
+    "            \"max_depth\": [ 5, 10, 15],\n",
     "            \"min_samples_split\": [2, 5, 10],\n",
     "            \"min_samples_leaf\": [1, 2, 5],\n",
     "            # 'splitter':['best','random'],\n",
-    "            \"max_features\": [None, 'sqrt', 'log2']}\n",
+    "            \"max_features\": [ 'sqrt', 'log2']}\n",
     "\n",
-    "xgboost_reg_params = {\n",
-    "    \"learning_rate\": [0.1, 0.05, 0.01],\n",
-    "    \"n_estimators\": [100, 200, 300],\n",
-    "    \"max_depth\": [3, 4, 5, 6],\n",
-    "    \"min_child_weight\": [1, 3, 5],\n",
-    "    \"subsample\": [0.7, 0.8, 0.9],\n",
-    "    \"colsample_bytree\": [0.5, 0.7, 0.9],\n",
-    "    \"gamma\": [0, 0.1, 0.3]\n",
-    "}\n",
     "\n",
     "random_forest_params = {\n",
     "    \"n_estimators\": [100, 300, 500],\n",
-    "    \"max_depth\": [None, 5, 10, 15],\n",
+    "    \"max_depth\": [ 5, 10, 15],\n",
     "    \"min_samples_split\": [2, 5, 10],\n",
     "    \"min_samples_leaf\": [1, 2, 5],\n",
-    "    \"max_features\": ['sqrt', 'log2', None]\n",
+    "    \"max_features\": ['sqrt', 'log2']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "08390eb6",
    "metadata": {},
    "outputs": [],
@@ -751,14 +742,13 @@
     "gridcv_models = [\n",
     "                (\"Linear\",LinearRegression(),linear_params),  \n",
     "                (\"Decision\",DecisionTreeRegressor(),decision_tree_params),\n",
-    "                (\"XGBoostRegressor\",XGBRegressor(),xgboost_reg_params), \n",
     "                (\"RandomForest\", RandomForestRegressor(),random_forest_params)\n",
     "               ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "7c744301",
    "metadata": {},
    "outputs": [
@@ -767,8 +757,14 @@
      "output_type": "stream",
      "text": [
       "Fitting 3 folds for each of 1 candidates, totalling 3 fits\n",
-      "Fitting 3 folds for each of 216 candidates, totalling 648 fits\n",
-      "Fitting 3 folds for each of 2916 candidates, totalling 8748 fits\n"
+      "Fitting 3 folds for each of 108 candidates, totalling 324 fits\n",
+      "Fitting 3 folds for each of 162 candidates, totalling 486 fits\n",
+      "---------------- Best Params for Linear -------------------\n",
+      "{}\n",
+      "---------------- Best Params for Decision -------------------\n",
+      "{'criterion': 'absolute_error', 'max_depth': 15, 'max_features': 'log2', 'min_samples_leaf': 1, 'min_samples_split': 5}\n",
+      "---------------- Best Params for RandomForest -------------------\n",
+      "{'max_depth': 15, 'max_features': 'log2', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 500}\n"
      ]
     }
    ],
@@ -793,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "e75ea8e7",
    "metadata": {},
    "outputs": [
@@ -816,40 +812,27 @@
       "\n",
       "Decision Tree Regression\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 1.8695\n",
-      "- Mean Absolute Error: 1.1837\n",
-      "- R2 Score: 0.9991\n",
+      "- Root Mean Squared Error: 4.1666\n",
+      "- Mean Absolute Error: 2.1185\n",
+      "- R2 Score: 0.9955\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 4.9538\n",
-      "- Mean Absolute Error: 3.2924\n",
-      "- R2 Score: 0.9939\n",
+      "- Root Mean Squared Error: 9.0987\n",
+      "- Mean Absolute Error: 5.8950\n",
+      "- R2 Score: 0.9795\n",
       "===================================\n",
       "\n",
       "\n",
-      "XGBoost Regression\n",
+      "Random Forest Regression\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 1.1399\n",
-      "- Mean Absolute Error: 0.8516\n",
-      "- R2 Score: 0.9997\n",
+      "- Root Mean Squared Error: 1.4473\n",
+      "- Mean Absolute Error: 0.9477\n",
+      "- R2 Score: 0.9995\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 1.8763\n",
-      "- Mean Absolute Error: 1.3247\n",
-      "- R2 Score: 0.9991\n",
-      "===================================\n",
-      "\n",
-      "\n",
-      "Random Forrest Regression\n",
-      "Model performance for Training set\n",
-      "- Root Mean Squared Error: 1.1362\n",
-      "- Mean Absolute Error: 0.7279\n",
-      "- R2 Score: 0.9997\n",
-      "----------------------------------\n",
-      "Model performance for Test set\n",
-      "- Root Mean Squared Error: 2.8318\n",
-      "- Mean Absolute Error: 1.8654\n",
-      "- R2 Score: 0.9980\n",
+      "- Root Mean Squared Error: 3.3214\n",
+      "- Mean Absolute Error: 2.1714\n",
+      "- R2 Score: 0.9973\n",
       "===================================\n",
       "\n",
       "\n"
@@ -860,9 +843,8 @@
     "## Retraining the models with best parameters\n",
     "models = {\n",
     "    \"Linear Regression\": LinearRegression(),\n",
-    "    \"Decision Tree Regression\": DecisionTreeRegressor(criterion = 'squared_error', max_depth = 15, max_features = None, min_samples_leaf = 2, min_samples_split = 5),\n",
-    "    \"XGBoost Regression\": XGBRegressor(colsample_bytree = 0.9, gamma = 0, learning_rate = 0.1, max_depth = 6, min_child_weight = 3, n_estimators = 300, subsample = 0.7),\n",
-    "    \"Random Forest Regression\" : RandomForestRegressor(max_depth = 15, max_features = None, min_samples_leaf = 1, min_samples_split = 2, n_estimators = 300)\n",
+    "    \"Decision Tree Regression\": DecisionTreeRegressor(criterion = 'absolute_error', max_depth = 15, max_features = 'log2', min_samples_leaf = 1, min_samples_split = 5),\n",
+    "    \"Random Forest Regression\" : RandomForestRegressor(max_depth = 15, max_features = 'log2', min_samples_leaf = 1, min_samples_split = 2, n_estimators = 500)\n",
     "}\n",
     "\n",
     "model_list = []\n",
@@ -904,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "d1290ebe",
    "metadata": {},
    "outputs": [
@@ -936,18 +918,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>XGBoost Regression</td>\n",
-       "      <td>0.999128</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Random Forrest Regression</td>\n",
-       "      <td>0.998013</td>\n",
+       "      <td>Random Forest Regression</td>\n",
+       "      <td>0.997266</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Decision Tree Regression</td>\n",
-       "      <td>0.993919</td>\n",
+       "      <td>0.979487</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -959,14 +936,13 @@
        "</div>"
       ],
       "text/plain": [
-       "                  Model Name  R2_score\n",
-       "2         XGBoost Regression  0.999128\n",
-       "3  Random Forrest Regression  0.998013\n",
-       "1   Decision Tree Regression  0.993919\n",
-       "0          Linear Regression  0.966918"
+       "                 Model Name  R2_score\n",
+       "2  Random Forest Regression  0.997266\n",
+       "1  Decision Tree Regression  0.979487\n",
+       "0         Linear Regression  0.966918"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,7 +956,7 @@
    "id": "bae72599",
    "metadata": {},
    "source": [
-    "Among all evaluated models, XGBoost Regression achieved the highest predictive performance with an R² score of 0.999, indicating an excellent fit to the data."
+    "Among all evaluated models, Random Forest Regression achieved the highest predictive performance with an R² score of 0.99, indicating an excellent fit to the data."
    ]
   }
  ],
@@ -1000,7 +976,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
